# Ros

Ros/: .gitignore
Ros/lab1/lab_1/: CMakeLists.txt  package.xml
Ros/lab1/lab_1/src/: main.cpp
Ros/lab1/liner_velocity/: CMakeLists.txt  package.xml
Ros/lab1/liner_velocity/launch/: topic_examples.launch.py
Ros/lab1/liner_velocity/src/: main.cpp
Ros/lab1/my_lab/: package.xml  setup.cfg  setup.py
Ros/lab1/my_lab/my_lab/: lab_1_py.py  lab_2_py.py
Ros/lab5_RobotLocalization/: CMakeLists.txt  package.xml
Ros/lab5_RobotLocalization/config/: ekf.yaml
Ros/lab5_RobotLocalization/launch/: robot_localization.launch.py
Ros/lab5_RobotLocalization/sample_bag_for_localization_humble/: convert_jazzy_to_humble.py  metadata.yaml  metadata_jazzy.yaml.bak
Ros/lab5_RobotLocalization/src/: orientation_analysis.cpp
Ros/my_sensor_station/: package.xml  setup.cfg  setup.py
Ros/my_sensor_station/arduino/sensor_station/: sensor_station.ino
Ros/my_sensor_station/config/: monitor.rviz
Ros/my_sensor_station/launch/: monitor_station.launch.py
Ros/my_sensor_station/my_sensor_station/: arduino_bridge.py  monitor_node.py
Ros/simple_turtle_patrol/: CMakeLists.txt  package.xml
Ros/simple_turtle_patrol/launch/: launch.py
Ros/simple_turtle_patrol/msg/: RobotStatus.msg
Ros/simple_turtle_patrol/src/: patrol_controller.cpp  status_publisher.cpp
Ros/task_1/: CMakeLists.txt  package.xml
Ros/task_1/src/: publisher_1.cpp  publisher_2.cpp  subscriber.cpp
