<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>liner_velocity</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="abdelrahmankhaled55669933@gmail.com">abdo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- Needed to run the launch file -->
<exec_depend>launch</exec_depend>
<exec_depend>launch_ros</exec_depend>

<!-- Add exec_depend for every package whose nodes you launch -->
<exec_depend>topic_examples</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
